Intentar arreglar el cors

--- a/docker/backend/Dockerfile
+++ b/docker/backend/Dockerfile
@@ -23,6 +23,10 @@ RUN composer install --no-dev --optimize-autoloader
 RUN chown -R www-data:www-data /var/www/html \
     && chmod -R 775 storage bootstrap/cache
 
+RUN a2enmod rewrite
+RUN a2enmod rewrite headers
+RUN a2enmod headers
+
 COPY docker/backend/apache.conf /etc/apache2/sites-available/000-default.conf
 
 # Carpeta public de apache
