--- a/docker/backend/apache.conf
+++ b/docker/backend/apache.conf
@@ -1,12 +1,19 @@
-<VirtualHost *:80>
-    ServerName localhost
-    DocumentRoot /var/www/html/public
+<Directory /var/www/html/public>
+    Options Indexes FollowSymLinks
+    AllowOverride All
+    Require all granted
 
-    <Directory /var/www/html/public>
-        AllowOverride All
-        Require all granted
-    </Directory>
+    # Habilitar cabeceras para CORS si el middleware de Laravel no llega a tiempo
+    <IfModule mod_rewrite.c>
+        RewriteEngine On
 
-    ErrorLog ${APACHE_LOG_DIR}/error.log
-    CustomLog ${APACHE_LOG_DIR}/access.log combined
-</VirtualHost>
+        # Manejar el Preflight (peticiones OPTIONS) de forma manual si es necesario
+        RewriteCond %{REQUEST_METHOD} OPTIONS
+        RewriteRule ^(.*)$ $1 [R=200,L]
+
+        # Redirigir todo a index.php excepto archivos existentes
+        RewriteCond %{REQUEST_FILENAME} !-f
+        RewriteRule ^ index.php [QSA,L]
+    </IfModule>
+</Directory>
+
