--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,10 +44,10 @@ services:
     build:
       context: .
       dockerfile: docker/frontend/Dockerfile
+      args:
+        VITE_API_BASE_URL: http://172.20.228.41:8000
     container_name: frontend-egibide
     restart: unless-stopped
-    environment:
-      VITE_API_BASE_URL: http://backend:80
     ports:
       - '80:80'
     depends_on:
