--- a/docker/frontend/Dockerfile
+++ b/docker/frontend/Dockerfile
@@ -7,6 +7,10 @@ COPY ../../frontend/package*.json ./
 RUN npm ci
 
 COPY ../../frontend/ .
+
+ARG VITE_API_BASE_URL
+ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
+
 RUN npm run build
 
 # Servir web compilada
